fixed scrollbar and scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,3 +30,21 @@
     opacity: 0.1;
   }
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 6px;
+  @apply bg-neutral-800
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-neutral-900
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-neutral-800/70
+}
